# tgmm-lb1

./: cutset.py  cycles.py  determinant.py  graphs_data.py  matrix_power.py  pyproject.toml  task1-adj.py  task1-inc.py  task2.py  task3-adj.py  task3-check.py  task3-inc.py  task4-power.py  transpose_this_shi.py  xdt-delete-117.sh  xdt-delete-81.sh  xdt-paste-81.sh
